--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -1,7 +1,347 @@
 :root {
+    /* 프로젝트 메인 컬러 */
     --gray: 125 125 125;
     --dark-gray: 045 045 045;
     --blue: 20 100 255;
     --white: 255 255 255;
     --black: 0 0 0;
+
+    /*
+    * 프로젝트 서브 컬러
+    * _______________________________________________________________
+    *
+    * COLOR INDEX
+    * _______________________________________________________________
+    *  - RED
+    *  - PINK
+    *  - PURPLE
+    *  - DEEP PURPLE
+    *  - INDIGO
+    *  - BLUE
+    *  - LIGHT-BLUE
+    *  - CYAN
+    *  - TEAL
+    *  - GREEN
+    *  - LIGHT GREEN
+    *  - LIME
+    *  - YELLOW
+    *  - AMBER
+    *  - ORANGE
+    *  - DEEP-ORANGE
+    *  - BROWN
+    *  - GRAY
+    *  - BLUE-GRAY
+    * _______________________________________________________________
+    */
+
+    // RED
+    // _______________________________________________________________
+    --red-50: 255 235 238;
+    --red-100: 255 204 209;
+    --red-200: 239 154 154;
+    --red-300: 229 113 113;
+    --red-400: 239 85 82;
+    --red-500: 244 64 52;
+    --red-600: 229 55 52;
+    --red-700: 211 49 49;
+    --red-800: 199 41 41;
+    --red-900: 181 28 28;
+    --red-A100: 255 138 128;
+    --red-A200: 255 82 82;
+    --red-A400: 255 26 71;
+    --red-A700: 214 0 0;
+
+    // PINK
+    // _______________________________________________________________
+    --pink-50: 252 227 236;
+    --pink-100: 248 186 207;
+    --pink-200: 244 144 177;
+    --pink-300: 240 96 144;
+    --pink-400: 236 65 122;
+    --pink-500: 233 32 99;
+    --pink-600: 218 27 97;
+    --pink-700: 195 24 93;
+    --pink-800: 173 20 87;
+    --pink-900: 134 14 78;
+    --pink-A100: 255 128 170;
+    --pink-A200: 255 66 129;
+    --pink-A400: 245 0 86;
+    --pink-A700: 197 17 98;
+
+    // PURPLE
+    // _______________________________________________________________
+    --purple-50: 243 229 245;
+    --purple-100: 226 192 232;
+    --purple-200: 205 146 216;
+    --purple-300: 187 105 201;
+    --purple-400: 171 71 189;
+    --purple-500: 155 39 176;
+    --purple-600: 140 36 168;
+    --purple-700: 123 31 163;
+    --purple-800: 104 27 152;
+    --purple-900: 73 20 138;
+    --purple-A100: 234 131 252;
+    --purple-A200: 223 65 251;
+    --purple-A400: 212 0 250;
+    --purple-A700: 170 0 255;
+
+    // DEEP PURPLE
+    // _______________________________________________________________
+    --deep-purple-50: 238 233 247;
+    --deep-purple-100: 209 195 233;
+    --deep-purple-200: 180 158 219;
+    --deep-purple-300: 149 116 205;
+    --deep-purple-400: 126 86 194;
+    --deep-purple-500: 103 58 182;
+    --deep-purple-600: 94 53 177;
+    --deep-purple-700: 82 45 169;
+    --deep-purple-800: 69 39 160;
+    --deep-purple-900: 49 27 147;
+    --deep-purple-A100: 181 138 255;
+    --deep-purple-A200: 124 77 255;
+    --deep-purple-A400: 102 31 255;
+    --deep-purple-A700: 98 0 235;
+
+    // INDIGO
+    // _______________________________________________________________
+    --indigo-50: 233 235 246;
+    --indigo-100: 196 201 233;
+    --indigo-200: 160 168 218;
+    --indigo-300: 123 136 204;
+    --indigo-400: 93 108 192;
+    --indigo-500: 64 81 181;
+    --indigo-600: 57 73 172;
+    --indigo-700: 48 63 161;
+    --indigo-800: 41 53 148;
+    --indigo-900: 26 34 127;
+    --indigo-A100: 138 155 255;
+    --indigo-A200: 82 108 254;
+    --indigo-A400: 62 91 254;
+    --indigo-A700: 47 78 254;
+
+    // BLUE
+    // _______________________________________________________________
+    --blue-50: 226 242 253;
+    --blue-100: 188 222 251;
+    --blue-200: 144 202 249;
+    --blue-300: 101 181 246;
+    --blue-400: 66 165 245;
+    --blue-500: 32 148 243;
+    --blue-600: 31 137 229;
+    --blue-700: 25 117 210;
+    --blue-800: 21 101 193;
+    --blue-900: 13 72 160;
+    --blue-A100: 128 176 255;
+    --blue-A200: 66 135 255;
+    --blue-A400: 41 119 255;
+    --blue-A700: 41 98 255;
+
+    // LIGHT-BLUE
+    // _______________________________________________________________
+    --light-blue-50: 225 245 254;
+    --light-blue-100: 182 230 252;
+    --light-blue-200: 128 211 250;
+    --light-blue-300: 80 194 247;
+    --light-blue-400: 40 181 246;
+    --light-blue-500: 2 166 242;
+    --light-blue-600: 3 152 226;
+    --light-blue-700: 2 135 207;
+    --light-blue-800: 2 119 187;
+    --light-blue-900: 1 89 157;
+    --light-blue-A100: 128 217 255;
+    --light-blue-A200: 66 195 255;
+    --light-blue-A400: 0 174 255;
+    --light-blue-A700: 0 145 235;
+
+    // CYAN
+    // _______________________________________________________________
+    --cyan-50: 224 247 250;
+    --cyan-100: 177 234 242;
+    --cyan-200: 128 222 234;
+    --cyan-300: 76 207 225;
+    --cyan-400: 37 197 218;
+    --cyan-500: 0 189 214;
+    --cyan-600: 0 171 194;
+    --cyan-700: 0 151 168;
+    --cyan-800: 0 131 143;
+    --cyan-900: 0 99 102;
+    --cyan-A100: 133 255 255;
+    --cyan-A200: 26 255 255;
+    --cyan-A400: 0 229 255;
+    --cyan-A700: 0 186 214;
+
+    // TEAL
+    // _______________________________________________________________
+    --teal-50: 223 241 241;
+    --teal-100: 179 223 220;
+    --teal-200: 128 203 196;
+    --teal-300: 78 183 172;
+    --teal-400: 38 166 153;
+    --teal-500: 0 148 133;
+    --teal-600: 0 138 124;
+    --teal-700: 0 122 108;
+    --teal-800: 0 107 95;
+    --teal-900: 0 77 64;
+    --teal-A100: 168 255 235;
+    --teal-A200: 102 255 219;
+    --teal-A400: 28 233 181;
+    --teal-A700: 0 189 164;
+
+    // GREEN
+    // _______________________________________________________________
+    --green-50: 234 246 235;
+    --green-100: 199 229 200;
+    --green-200: 164 213 166;
+    --green-300: 128 198 132;
+    --green-400: 104 187 108;
+    --green-500: 76 174 79;
+    --green-600: 68 162 72;
+    --green-700: 57 142 61;
+    --green-800: 47 127 51;
+    --green-900: 28 95 32;
+    --green-A100: 187 246 204;
+    --green-A200: 106 240 176;
+    --green-A400: 0 230 119;
+    --green-A700: 0 199 83;
+
+    // LIGHT GREEN
+    // _______________________________________________________________
+    --light-green-50: 240 248 232;
+    --light-green-100: 221 238 201;
+    --light-green-200: 196 224 163;
+    --light-green-300: 174 213 129;
+    --light-green-400: 156 204 102;
+    --light-green-500: 139 195 75;
+    --light-green-600: 124 179 66;
+    --light-green-700: 104 159 56;
+    --light-green-800: 84 137 47;
+    --light-green-900: 50 103 29;
+    --light-green-A100: 203 255 143;
+    --light-green-A200: 176 255 87;
+    --light-green-A400: 118 255 5;
+    --light-green-A700: 99 222 23;
+
+    // LIME
+    // _______________________________________________________________
+    --lime-50: 249 251 233;
+    --lime-100: 240 244 195;
+    --lime-200: 230 238 155;
+    --lime-300: 219 231 116;
+    --lime-400: 211 225 86;
+    --lime-500: 203 220 56;
+    --lime-600: 194 204 51;
+    --lime-700: 176 181 44;
+    --lime-800: 158 158 36;
+    --lime-900: 130 119 23;
+    --lime-A100: 244 255 128;
+    --lime-A200: 239 255 66;
+    --lime-A400: 200 255 0;
+    --lime-A700: 176 235 0;
+
+    // YELLOW
+    // _______________________________________________________________
+    --yellow-50: 255 253 229;
+    --yellow-100: 255 249 194;
+    --yellow-200: 255 245 158;
+    --yellow-300: 255 241 117;
+    --yellow-400: 255 238 87;
+    --yellow-500: 255 236 61;
+    --yellow-600: 253 216 53;
+    --yellow-700: 251 192 45;
+    --yellow-800: 249 168 36;
+    --yellow-900: 245 128 25;
+    --yellow-A100: 255 255 143;
+    --yellow-A200: 255 255 0;
+    --yellow-A400: 255 234 0;
+    --yellow-A700: 255 213 0;
+
+    // AMBER
+    // _______________________________________________________________
+    --amber-50: 255 248 224;
+    --amber-100: 255 236 179;
+    --amber-200: 255 223 128;
+    --amber-300: 255 213 77;
+    --amber-400: 255 201 41;
+    --amber-500: 255 193 5;
+    --amber-600: 255 179 0;
+    --amber-700: 255 162 0;
+    --amber-800: 255 145 0;
+    --amber-900: 255 110 0;
+    --amber-A100: 255 230 128;
+    --amber-A200: 255 214 66;
+    --amber-A400: 255 195 0;
+    --amber-A700: 255 170 0;
+
+    // ORANGE
+    // _______________________________________________________________
+    --orange-50: 255 243 224;
+    --orange-100: 255 224 179;
+    --orange-200: 255 204 128;
+    --orange-300: 255 184 77;
+    --orange-400: 255 167 36;
+    --orange-500: 255 153 0;
+    --orange-600: 250 137 0;
+    --orange-700: 245 122 0;
+    --orange-800: 240 108 0;
+    --orange-900: 230 80 0;
+    --orange-A100: 255 208 128;
+    --orange-A200: 255 173 66;
+    --orange-A400: 255 145 0;
+    --orange-A700: 255 110 0;
+
+    // DEEP-ORANGE
+    // _______________________________________________________________
+    --deep-orange-50: 251 235 233;
+    --deep-orange-100: 255 204 189;
+    --deep-orange-200: 255 169 143;
+    --deep-orange-300: 255 138 102;
+    --deep-orange-400: 255 110 66;
+    --deep-orange-500: 255 87 36;
+    --deep-orange-600: 244 81 31;
+    --deep-orange-700: 230 73 25;
+    --deep-orange-800: 213 66 21;
+    --deep-orange-900: 192 54 12;
+    --deep-orange-A100: 255 157 128;
+    --deep-orange-A200: 255 110 66;
+    --deep-orange-A400: 255 60 0;
+    --deep-orange-A700: 219 44 0;
+
+    // BROWN
+    // _______________________________________________________________
+    --brown-50: 240 236 234;
+    --brown-100: 214 203 199;
+    --brown-200: 188 170 164;
+    --brown-300: 160 135 126;
+    --brown-400: 141 110 98;
+    --brown-500: 121 86 73;
+    --brown-600: 108 76 65;
+    --brown-700: 93 64 55;
+    --brown-800: 77 51 45;
+    --brown-900: 62 39 35;
+
+    // GRAY
+    // _______________________________________________________________
+    --gray-50: 250 250 250;
+    --gray-100: 245 245 245;
+    --gray-200: 237 237 237;
+    --gray-300: 224 224 224;
+    --gray-400: 189 189 189;
+    --gray-500: 158 158 158;
+    --gray-600: 117 117 117;
+    --gray-700: 97 97 97;
+    --gray-800: 66 66 66;
+    --gray-900: 33 33 33;
+
+    // BLUE-GRAY
+    // _______________________________________________________________
+    --blue-gray-50: 237 240 242;
+    --blue-gray-100: 208 217 221;
+    --blue-gray-200: 176 190 196;
+    --blue-gray-300: 143 163 174;
+    --blue-gray-400: 120 144 155;
+    --blue-gray-500: 96 124 138;
+    --blue-gray-600: 84 109 120;
+    --blue-gray-700: 69 90 99;
+    --blue-gray-800: 54 70 78;
+    --blue-gray-900: 37 49 55;
 }
