메인 페이지 추가 (미완)

--- a/src/assets/scss/default.scss
+++ b/src/assets/scss/default.scss
@@ -40,6 +40,18 @@
         font-weight: 500;
     }
 
+    &__normalFont1 {
+        font-size: 18px;
+    }
+
+    &__normalFont2 {
+        font-size: 16px;
+    }
+
+    &__normalFont3 {
+        font-size: 14px;
+    }
+
     &__navigationBar {
         font-size: 22px;
         font-weight: 550;
