--- a/src/assets/scss/anime.scss
+++ b/src/assets/scss/anime.scss
@@ -11,3 +11,62 @@
     }
     animation: card_fade_in 0.35s ease-out both;
 }
+
+
+@mixin slideInFromRight {
+    @keyframes slideInFromRight {
+        0% {
+          transform: translateX(100%);
+          opacity: 0;
+        }
+        100% {
+          transform: translateX(0);
+          opacity: 1;
+        }
+    }
+    
+    animation: slideInFromRight 0.35s ease-in-out forwards;
+}
+
+@mixin slideInFromLeft {
+    @keyframes slideInFromRight {
+      0% {
+        transform: translateX(-100%);
+        opacity: 0;
+      }
+      100% {
+        transform: translateX(0);
+        opacity: 1;
+      }
+    }
+    
+    animation: slideInFromRight 0.35s ease-in-out forwards;
+}
+
+@mixin slideInFromTop {
+  @keyframes slideInFromTop {
+    0% {
+      transform: translateY(-50%);
+      opacity: 0;
+    }
+    100% {
+      transform: translateY(0);
+      opacity: 1;
+    }
+  }
+  
+  animation: slideInFromTop 0.35s ease-in-out forwards;
+}
+
+@mixin slideInFromBottom {
+  @keyframes slideInFromBottom {
+    0% {
+      transform: translateY(50%);
+    }
+    100% {
+      transform: translateY(0);
+    }
+  }
+
+  animation: slideInFromBottom 0.35s ease-in-out forwards;
+}
