--- a/src/assets/scss/default.scss
+++ b/src/assets/scss/default.scss
@@ -26,16 +26,21 @@
     }
 
     &__subtitle1 {
-        font-size: 20px;
+        font-size: 22px;
         font-weight: 500;
     }
 
     &__subtitle2 {
-        font-size: 18px;
+        font-size: 20px;
         font-weight: 500;
     }
 
     &__subtitle3 {
+        font-size: 18px;
+        font-weight: 500;
+    }
+
+    &__subtitle4 {
         font-size: 16px;
         font-weight: 500;
     }
@@ -86,3 +91,26 @@
     }
 
 }
+
+.scrollbar { 
+    overflow-y: auto;
+    
+    &::-webkit-scrollbar {
+        width: 10px;
+    }
+    
+    &::-webkit-scrollbar-thumb {
+        background-color: rgba(var(--gray-500));
+        border-radius: 10px;
+
+        &:hover {
+            background-color: rgba(var(--gray-600));
+        }
+    }
+
+    &::-webkit-scrollbar-track {
+        background-color: rgba(var(--gray-300));
+    }
+
+}
+  
