--- a/src/assets/scss/anime.scss
+++ b/src/assets/scss/anime.scss
@@ -1,10 +1,10 @@
 @mixin  card_fade_in {
     @keyframes card_fade_in {
-        from {
+        0% {
             transform: translateY(25px);
             opacity: 0;
         }
-        to {
+        100% {
             transform: translateY(0px);
             opacity: 1;
         }
